# tz-wrapped-backend

./: .dockerignore  .env.prd.example  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  docker-compose.prd.yml  docker-compose.yml
config/: Default.toml  Development.toml  Local.toml  Production.toml
k8s/tz-wrapped/common/: secret.yaml
k8s/tz-wrapped/common/backend/: deployment.yaml  service.yaml
k8s/tz-wrapped/development/: config-map.yaml  ingress.yaml
k8s/tz-wrapped/production/: config-map.yaml  ingress.yaml
migrations/2020-11-20-061253_create_tables/: down.sql  up.sql
migrations/2022-02-04-100041_create_node_endpoints/: down.sql  up.sql
src/: auth.rs  crypto.rs  main.rs  notifications.rs  settings.rs
src/api/: mod.rs
src/api/approvals/: get.rs  mod.rs  post.rs
src/api/authentication/: delete.rs  get.rs  mod.rs  patch.rs  post.rs
src/api/contracts/: get.rs  mod.rs
src/api/gatekeepers/: get.rs  mod.rs
src/api/models/: approvals.rs  authentication.rs  common.rs  contract.rs  contracts.rs  error.rs  mod.rs  operation_approval.rs  operation_request.rs  operations.rs  tezos_node.rs  user.rs  users.rs
src/api/nodes/: get.rs  mod.rs  post.rs
src/api/operation/: mint.rs
src/api/operation_approvals/: get.rs  mod.rs  post.rs
src/api/operation_requests/: delete.rs  get.rs  mod.rs  patch.rs  post.rs
src/api/operations/: get.rs  mod.rs  patch.rs  post.rs
src/api/users/: get.rs  mod.rs
src/db/: mod.rs  schema.rs
src/db/models/: authentication_challenge.rs  capability.rs  contract.rs  gatekeeper.rs  keyholder.rs  mod.rs  node_endpoint.rs  operation_approval.rs  operation_request.rs  pagination.rs  proposed_user.rs  user.rs
src/tezos/: coding.rs  mod.rs  utils.rs
src/tezos/contract/: fa1.rs  fa2.rs  mod.rs  multisig.rs
src/tezos/contract/multisig/: generic_multisig.rs  mod.rs  specific_multisig.rs
src/tezos/micheline/: data.rs  instructions.rs  literal.rs  mod.rs  prim.rs  primitive.rs  types.rs
src/tezos/multisig/: generic_multisig.rs  mod.rs  specific_multisig.rs
