[package]
name = "tz-wrapped-backend"
version = "0.1.0"
authors = ["Mike Godenzi <m.godenzi@papers.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
sodiumoxide = "0.2.6"
actix-cors = "0.5.2"
diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
r2d2 = "0.8.9"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.117"
serde_json = { version = "1.0", features = ["preserve_order"] }
derive_more = "0.99.11"
base58check = "0.1.0"
hex = "0.4.2"
radix_fmt = "1.0.0"
num-traits = "0.2"
num-derive = "0.3"
reqwest = { version = "0.10.9", features = ["json"] }
config = "0.10.1"
lazy_static = "1.4.0"
lettre = "0.9"
lettre_email = "0.9"
native-tls = "0.2"
async-trait = "0.1.42"

[dev-dependencies]
actix-rt = "*"
